--- a/AsignaturasLicenciatura.bib
+++ b/AsignaturasLicenciatura.bib
@@ -3,7 +3,7 @@
     year    = {2005},
     howpublished = {ITSA},
     month = 06,
-    comment = {ITSA — ene-jun 05}
+    howpublished = {ITSA — ene-jun 05}
 }
 
 @unpublished{teach:ITSA:SeminarioSistemasDigitales:2005julago,
@@ -12,7 +12,7 @@
     howpublished = {ITSA},
     month = 08,
 
-  comment = {ITSA — jul-ago 05}
+  howpublished = {ITSA — jul-ago 05}
 }
 
 @unpublished{teach:ITSA:SistemasDigitales:2005agodic,
@@ -21,7 +21,7 @@
     howpublished = {ITSA},
     month = 12,
 
-  comment = {ITSA — ago-dic 05}
+  howpublished = {ITSA — ago-dic 05}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasII:2005agodic,
@@ -29,7 +29,7 @@
   year    = {2005},
     howpublished = {ITSA},
     month = 12,
-  comment = {ITSA — ago-dic 05}
+  howpublished = {ITSA — ago-dic 05}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasI:2006enejun,
@@ -37,7 +37,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 06,
-  comment = {ITSA — ene-jun 06}
+  howpublished = {ITSA — ene-jun 06}
 }
 
 @unpublished{teach:ITSA:ArquitecturaComputadorasII:2006enejun,
@@ -45,7 +45,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 06,
-  comment = {ITSA — ene-jun 06}
+  howpublished = {ITSA — ene-jun 06}
 }
 
 @unpublished{teach:ITSA:ProgramacionSistemasI:2006julago,
@@ -53,7 +53,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 08,
-  comment = {ITSA — jul-ago 06}
+  howpublished = {ITSA — jul-ago 06}
 }
 
 @unpublished{teach:ITSA:LenguajeEnsamblador:2006agodic,
@@ -61,7 +61,7 @@
   year    = {2006},
     howpublished = {ITSA},
     month = 12,
-  comment = {ITSA — ago-dic 06}
+  howpublished = {ITSA — ago-dic 06}
 }
 
 @unpublished{teach:UPP:HerramientasOfimaticas:2006sepdic,
@@ -69,7 +69,7 @@
   year    = {2006},
     howpublished = {UPP},
     month = 12,
-  comment = {UPP — sep-dic 06}
+  howpublished = {UPP — sep-dic 06}
 }
 
 @unpublished{teach:UPP:ArquitecturasAvanzadas:2006sepdic,
@@ -77,7 +77,7 @@
   year    = {2006},
     howpublished = {UPP},
     month = 12,
-  comment = {UPP — sep-dic 06}
+  howpublished = {UPP — sep-dic 06}
 }
 
 @unpublished{teach:ITSA:Interfases:2007enejun,
@@ -85,7 +85,7 @@
   year    = {2007},
     howpublished = {ITSA},
     month = 06,
-  comment = {ITSA — ene-jun 07}
+  howpublished = {ITSA — ene-jun 07}
 }
 
 @unpublished{teach:ITSA:LenguajeEnsamblador:2007agodic,
@@ -224,337 +224,337 @@
 @unpublished{teach:UPV:ArquitecturaProcesadores:2012eneabr,
   title   = {Arquitectura de Procesadores},
   year    = {2012},
-  comment = {UPV — ene-abr 12}
+  howpublished = {UPV — ene-abr 12}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2012mayago,
   title   = {Sistemas Embebidos},
   year    = {2012},
-  comment = {UPV — may-ago 12}
+  howpublished = {UPV — may-ago 12}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2012agodic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2012},
-  comment = {UPV — ago-dic 12}
+  howpublished = {UPV — ago-dic 12}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2013eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2013},
-  comment = {UPV — ene-abr 13}
+  howpublished = {UPV — ene-abr 13}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2013eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2013},
-  comment = {UPV — ene-abr 13}
+  howpublished = {UPV — ene-abr 13}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2013mayago,
   title   = {Graficación por Computadora Avanzada},
   year    = {2013},
-  comment = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago 13}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2013mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2013},
-  comment = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago 13}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2013mayago,
   title   = {Sistemas Embebidos},
   year    = {2013},
-  comment = {UPV — may-ago 13}
+  howpublished = {UPV — may-ago 13}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2013sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2013},
-  comment = {UPV — sep-dic 13}
+  howpublished = {UPV — sep-dic 13}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2014eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2014},
-  comment = {UPV — ene-abr 14}
+  howpublished = {UPV — ene-abr 14}
 }
 
 @unpublished{teach:UPV:ProcesamientoParalelo:2014eneabr,
   title   = {Procesamiento Paralelo y Distribuido},
   year    = {2014},
-  comment = {UPV — ene-abr 14}
+  howpublished = {UPV — ene-abr 14}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2014mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2014},
-  comment = {UPV — may-ago 14}
+  howpublished = {UPV — may-ago 14}
 }
 
 @unpublished{teach:UPV:SistemasEmbebidos:2014mayago,
   title   = {Sistemas Embebidos},
   year    = {2014},
-  comment = {UPV — may-ago 14}
+  howpublished = {UPV — may-ago 14}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2014sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2014},
-  comment = {UPV — sep-dic 14}
+  howpublished = {UPV — sep-dic 14}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2015mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2015},
-  comment = {UPV — may-ago 15}
+  howpublished = {UPV — may-ago 15}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2015sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2015},
-  comment = {UPV — sep-dic 15}
+  howpublished = {UPV — sep-dic 15}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2016eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2016},
-  comment = {UPV — ene-abr 16}
+  howpublished = {UPV — ene-abr 16}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2016mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2016},
-  comment = {UPV — may-ago 16}
+  howpublished = {UPV — may-ago 16}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2016sepdic,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2016},
-  comment = {UPV — sep-dic 16}
+  howpublished = {UPV — sep-dic 16}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2017eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2017},
-  comment = {UPV — ene-abr 17}
+  howpublished = {UPV — ene-abr 17}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2017mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2017},
-  comment = {UPV — may-ago 17}
+  howpublished = {UPV — may-ago 17}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2017sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2017},
-  comment = {UPV — sep-dic 17}
+  howpublished = {UPV — sep-dic 17}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2018eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2018},
-  comment = {UPV — ene-abr 18}
+  howpublished = {UPV — ene-abr 18}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2018eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2018},
-  comment = {UPV — ene-abr 18}
+  howpublished = {UPV — ene-abr 18}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2018mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2018},
-  comment = {UPV — may-ago 18}
+  howpublished = {UPV — may-ago 18}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2018sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2018},
-  comment = {UPV — sep-dic 18}
+  howpublished = {UPV — sep-dic 18}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2019eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2019},
-  comment = {UPV — ene-abr 19}
+  howpublished = {UPV — ene-abr 19}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2019eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2019},
-  comment = {UPV — ene-abr 19}
+  howpublished = {UPV — ene-abr 19}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2019mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2019},
-  comment = {UPV — may-ago 19}
+  howpublished = {UPV — may-ago 19}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2019sepdic,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2019},
-  comment = {UPV — sep-dic 19}
+  howpublished = {UPV — sep-dic 19}
 }
 
 @unpublished{teach:UPV:GraficacionAvanzada:2020eneabr,
   title   = {Graficación por Computadora Avanzada},
   year    = {2020},
-  comment = {UPV — ene-abr 20}
+  howpublished = {UPV — ene-abr 20}
 }
 
 @unpublished{teach:UPV:IntGraficacion:2020eneabr,
   title   = {Introducción a la Graficación por Computadora},
   year    = {2020},
-  comment = {UPV — ene-abr 20}
+  howpublished = {UPV — ene-abr 20}
 }
 
 @unpublished{teach:ULSA:AdquisicionImagenes:2020enemay,
   title   = {Adquisición y Procesamiento de Imágenes},
   year    = {2020},
-  comment = {ULSA — ene-may 20}
+  howpublished = {ULSA — ene-may 20}
 }
 
 @unpublished{teach:UPV:ComputoMovil:2020mayago,
   title   = {Cómputo en Dispositivos Móviles},
   year    = {2020},
-  comment = {UPV — may-ago 20}
+  howpublished = {UPV — may-ago 20}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2020sepdic,
   title   = {Lenguajes y Autómatas},
   year    = {2020},
-  comment = {UPV — sep-dic 20}
+  howpublished = {UPV — sep-dic 20}
 }
 
 @unpublished{teach:UPV:FPOO:2021eneabr,
   title   = {Fundamentos de Programación Orientada a Objetos},
   year    = {2021},
-  comment = {UPV — ene-abr 21}
+  howpublished = {UPV — ene-abr 21}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2021mayago,
   title   = {Programación Móvil},
   year    = {2021},
-  comment = {UPV — may-ago 21}
+  howpublished = {UPV — may-ago 21}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2021sepdic,
   title   = {Lenguajes y Autómatas},
   year    = {2021},
-  comment = {UPV — sep-dic 21}
+  howpublished = {UPV — sep-dic 21}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2021sepdic,
   title   = {Programación Móvil},
   year    = {2021},
-  comment = {UPV — sep-dic 21}
+  howpublished = {UPV — sep-dic 21}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2022eneabr,
   title   = {Sistemas Inteligentes},
   year    = {2022},
-  comment = {UPV — ene-abr 22}
+  howpublished = {UPV — ene-abr 22}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2022mayago,
   title   = {Programación Móvil},
   year    = {2022},
-  comment = {UPV — may-ago 22}
+  howpublished = {UPV — may-ago 22}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2022sepdic,
   title   = {Programación Móvil},
   year    = {2022},
-  comment = {UPV — sep-dic 22}
+  howpublished = {UPV — sep-dic 22}
 }
 
 @unpublished{teach:UPV:POO:2022sepdic,
   title   = {Programación Orientada a Objetos},
   year    = {2022},
-  comment = {UPV — sep-dic 22}
+  howpublished = {UPV — sep-dic 22}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2023eneabr,
   title   = {Lenguajes y Autómatas},
   year    = {2023},
-  comment = {UPV — ene-abr 23}
+  howpublished = {UPV — ene-abr 23}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2023mayago,
   title   = {Sistemas Inteligentes},
   year    = {2023},
-  comment = {UPV — may-ago 23}
+  howpublished = {UPV — may-ago 23}
 }
 
 @unpublished{teach:UPV:FPOO:2023mayago,
   title   = {Fundamentos de Programación Orientada a Objetos},
   year    = {2023},
-  comment = {UPV — may-ago 23}
+  howpublished = {UPV — may-ago 23}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2023sepdic,
   title   = {Programación Móvil},
   year    = {2023},
-  comment = {UPV — sep-dic 23}
+  howpublished = {UPV — sep-dic 23}
 }
 
 @unpublished{teach:UPV:LenguajesAutomatas:2024eneabr,
   title   = {Lenguajes y Autómatas},
   year    = {2024},
-  comment = {UPV — ene-abr 24}
+  howpublished = {UPV — ene-abr 24}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2024eneabr,
   title   = {Programación Móvil},
   year    = {2024},
-  comment = {UPV — ene-abr 24}
+  howpublished = {UPV — ene-abr 24}
 }
 
 @unpublished{teach:UPV:POO:2024mayago,
   title   = {Programación Orientada a Objetos},
   year    = {2024},
-  comment = {UPV — may-ago 24}
+  howpublished = {UPV — may-ago 24}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2024mayago,
   title   = {Sistemas Inteligentes},
   year    = {2024},
-  comment = {UPV — may-ago 24}
+  howpublished = {UPV — may-ago 24}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2024sepdic,
   title   = {Programación Móvil},
   year    = {2024},
-  comment = {UPV — sep-dic 24}
+  howpublished = {UPV — sep-dic 24}
 }
 
 @unpublished{teach:UPV:SistemasInteligentes:2025eneabr,
   title   = {Sistemas Inteligentes},
   year    = {2025},
-  comment = {UPV — ene-abr 25}
+  howpublished = {UPV — ene-abr 25}
 }
 
 @unpublished{teach:UPV:ProgramacionMovil:2025mayago,
   title   = {Programación Móvil},
   year    = {2025},
-  comment = {UPV — may-ago 25}
+  howpublished = {UPV — may-ago 25}
 }
 
 @unpublished{teach:UPV:ProyectoIntegradorI:2025mayago,
   title   = {Proyecto Integrador I},
   year    = {2025},
-  comment = {UPV — may-ago 25}
+  howpublished = {UPV — may-ago 25}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2025sepdic,
   title   = {Desarrollo de Aplicaciones Móviles},
   year    = {2025},
-  comment = {UPV — sep-dic 25}
+  howpublished = {UPV — sep-dic 25}
 }
 
 % 2026
@@ -562,12 +562,12 @@
 @unpublished{teach:UPV:SistemasInteligentes:2026eneabr,
   title   = {Sistemas Inteligentes},
   year    = {2026},
-  comment = {UPV — ene-abr 26}
+  howpublished = {UPV — ene-abr 26}
 }
 
 @unpublished{teach:UPV:DesarrolloAppsMoviles:2026eneabr,
   title   = {Desarrollo de Aplicaciones Móviles},
   year    = {2026},
-  comment = {UPV — ene-abr 26}
+  howpublished = {UPV — ene-abr 26}
 }
 
